docs: update swagger for listing
