# app/router.js
@@ -52,7 +52,7 @@ middlewares.userAuthorization.authorize,
 controllers.api.lists.updateList
 );
 
-apiRouter.delete("/api/destroy/:id",
+apiRouter.delete("/api/destroys/:id",
 middlewares.userAuthorization.authorize,
 controllers.api.lists.deleteList
 );
